[build-system]
requires = ["setuptools>=42","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codes2"
version = "0.1.0"
description = "Useful image manipulation utilities and simple CLI"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["images", "pillow", "cli"]
license = {text = "MIT"}

[project.scripts]
image-tool = "image_tool.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["image_tool*"]
